v5.3.3
- Updated - Clean old changelog before block-based update

v5.3.2
- Removed - Gutenberg hide title plugin (and related PHP code) - not necessary in a FSE theme
- Fixed - Navigation offcanvas background inheritance
- Fixed - Height of Gutenberg Editor mode with Codemirror
- Fixed - Core/Image block attributes parsing for styles (output was reset when processing border radius)
- Added - Core/Template Part filter support to maintain experimental layout after upcomming Gutenberg plugin update (avoid additional group wrapper)

v5.3.1
- Updated - Site logo width on header template part
- Updated - CORE/Navigation - improved styleing for dropdowns
- Updated - CORE/Navigation - blockGap support
- Fixed - CORE/Navigation - temporary fix for the (hopefully temporary) issue with dropdown-item class for submenu
- Fixed - Content/Sidebar page template column class
- Fixed - Single template column class to match attribute
- Added - wecodeart( 'markup' ) API - moved all Markup class calls.
- Added - wecodeart( 'styles' ) API - moved all Styles class calls.

v5.3.0
- Updated - theme.json blockGap back to null (issues with 0 set on main block wrappers)
- Updated - Styles Extension: Move Gutenberg utilities to Styles extension
- Updated - Utilities now will generate own inline CSS / method to load any utility programatically
- Updated - Added couple more missing utilities
- Updated - JSON custom navbarBreakpoint to mobileBreakpoint rename (it is used on multiple places not just navbar)
- Updated - Markup::wrap error wording
- Updated - CF7 Support extension notification wording
- Updated - Prepare CORE/Navigation block for upcomming GB plugin update
- Updated - Local RO translations
- Fixed - Utilities responsive classes (generating wrong classnames for breakpoints)
- Fixed - Search post spacing issue - added post bottom margin
- Added - Opt out from the core colors and gradients

v5.2.9
- Updated - Placeholder from site url to "Placeholder" text