@@ -17,9 +17,7 @@
     <!-- /wp:column -->
     <!-- wp:column {"verticalAlignment":"center","className":"col-auto col-md-3"} -->
     <div class="wp-block-column is-vertically-aligned-center col-auto col-md-3">
-        <!-- wp:navigation-area -->
         <!-- wp:navigation {"textColor":"primary","overlayMenu":"mobile","__unstableLocation":"primary","overlayBackgroundColor":"primary","overlayTextColor":"white","layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"},"style":{"typography":{"textTransform":"uppercase","fontStyle":"normal","fontWeight":"600"}}} /-->
-        <!-- /wp:navigation-area -->
     </div>
     <!-- /wp:column -->
 </div>
