@@ -7,7 +7,7 @@ Description: A simple WordPress Theme Framework focused on SEO and speed (perfec
 Version: 5.3.3
 Requires PHP: 7.0
 Requires at least: 5.8
-Tested up to: 5.8
+Tested up to: 5.9
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: wecodeart
