@@ -1,5 +1,8 @@
 v5.3.3
-- Updated - Clean old changelog before block-based update
+- Updated - Global cleanup / JSON cleanup / Clean old changelog before block-based update
+- Updated - CSS utilities class suggestion added to Gutenberg Class extentsion from Styles\Utilities class
+- Removed - Navigation Area block used in header (deprecated until WP 5.9)
+- Fixed - Header/Footer template parts titles to uppercase
 
 v5.3.2
 - Removed - Gutenberg hide title plugin (and related PHP code) - not necessary in a FSE theme
